--- a/index.html
+++ b/index.html
@@ -5,10 +5,7 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Joshua Ooi | Portfolio</title>
     <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.0/dist/css/bootstrap.min.css" rel="stylesheet">
-    <style>
-        .hero { background: #f8f9fa; padding: 60px 0; }
-        .card-img-top { height: 200px; object-fit: cover; }
-    </style>
+    <link rel="stylesheet" href="styles.css">
 </head>
 <body>
 
