--- a/index.html
+++ b/index.html
@@ -1,56 +1,80 @@
 <!DOCTYPE html>
 <html lang="en">
+
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Joshua Ooi | Portfolio</title>
     <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.0/dist/css/bootstrap.min.css" rel="stylesheet">
     <link rel="stylesheet" href="styles.css">
+    <link href="https://fonts.googleapis.com/css2?family=Inter:wght@400;700&display=swap" rel="stylesheet">
 </head>
+
 <body>
 
-    <nav class="navbar navbar-expand-lg navbar-dark bg-dark">
+    <nav class="navbar navbar-expand-lg navbar-dark bg-dark sticky-top">
         <div class="container">
-            <a class="navbar-brand" href="#">Joshua Ooi</a>
+            <a class="navbar-brand fw-bold" href="#about">JOSHUA OOI</a>
+            <div class="navbar-nav ms-auto">
+                <a class="nav-link" href="#about">About</a>
+                <a class="nav-link" href="#projects">Projects</a>
+                <a class="nav-link" href="#contact">Contact</a>
+            </div>
         </div>
     </nav>
 
-    <header class="hero text-center">
-        <div class="container">
-            <h1 class="display-4">Junior Software Developer</h1>
-            <p class="lead">Building scalable web experiences and interactive games.</p>
+    <header id="about" class="hero-section d-flex align-items-center">
+        <div class="container text-center">
+            <h1 class="display-3 fw-bold fade-in">Hi, I'm Joshua.</h1>
+            <p class="lead fade-in-delayed">I’m an IT student specializing in building user-facing web features and
+                immersive game experiences.</p>
+            <div class="mt-4 fade-in-delayed">
+                <a href="#projects" class="btn btn-primary btn-lg px-4 me-md-2">View My Work</a>
+            </div>
         </div>
     </header>
 
-    <section class="container my-5">
-        <h2 class="mb-4">Projects</h2>
-        <div class="row g-4">
-            
-            <div class="col-md-6">
-                <div class="card h-100 shadow-sm">
-                    <div class="card-body">
-                        <h5 class="card-title">Full-Stack Web Application</h5>
-                        <p class="card-text">Developed using Python Flask and SQL. Deployed on Render.</p>
-                        <span class="badge bg-primary">Python</span>
-                        <span class="badge bg-info text-dark">SQL</span>
+    <section id="projects" class="container my-5 py-5">
+        <h2 class="text-center mb-5 fw-bold">Featured Projects</h2>
+
+        <div class="row mb-5 fade-in">
+            <div class="col-12">
+                <div class="card project-card-full shadow-sm border-0 overflow-hidden">
+                    <div class="row g-0">
+                        <div class="col-lg-6">
+                            <img src="assets/images/web-app.png" class="img-fluid h-100 w-100 object-fit-cover"
+                                alt="Web App">
+                        </div>
+                        <div class="col-lg-6 p-4 d-flex flex-column justify-content-center">
+                            <h3 class="fw-bold">Full-Stack Web App (IT1x25)</h3>
+                            <p class="text-muted mb-2"><strong>Role:</strong> Lead Developer</p>
+                            <p>Developed a user-centric platform to manage dynamic content using Python Flask and SQL.
+                                Focused on security checks and a mobile-responsive design.</p>
+                            <div class="tag-container mt-auto pt-3">
+                                <span class="mini-tag">Python</span>
+                                <span class="mini-tag">Flask</span>
+                                <span class="mini-tag">SQL</span>
+                                <span class="mini-tag">Render</span>
+                            </div>
+                        </div>
                     </div>
                 </div>
             </div>
-
-            <div class="col-md-6">
-                <div class="card h-100 shadow-sm">
-                    <div class="card-body">
-                        <h5 class="card-title">Roblox Studio & Python Games</h5>
-                        <p class="card-text">Custom gameplay mechanics using Luau and Turtle graphics.</p>
-                        <span class="badge bg-success">Luau</span>
-                        <span class="badge bg-warning text-dark">Python</span>
-                    </div>
-                </div>
-            </div>
-
         </div>
+
     </section>
 
+    <footer id="contact" class="bg-light py-5 border-top">
+        <div class="container text-center">
+            <h3>Thanks for stopping by!</h3>
+            <p class="text-muted">Feel free to reach out if you'd like to collaborate or just chat about code.</p>
+            <p class="fw-bold">joshuaooiky@gmail.com</p>
+            <p class="mt-4 small text-secondary">&copy; 2026 Joshua Ooi</p>
+        </div>
+    </footer>
+
     <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.3.0/dist/js/bootstrap.bundle.min.js"></script>
+    <script src="script.js"></script>
 </body>
+
 </html>
