added story section and restructured everything to template form

--- a/index.html
+++ b/index.html
@@ -21,6 +21,7 @@
             <div class="collapse navbar-collapse" id="navbarNav">
                 <div class="navbar-nav ms-auto">
                     <a class="nav-link" href="#about">About</a>
+                    <a class="nav-link" href="#story">My Story</a>
                     <a class="nav-link" href="#projects">Projects</a>
                     <a class="nav-link" href="#contact">Contact</a>
                 </div>
@@ -39,6 +40,46 @@
         </div>
     </header>
 
+    <section id="story">
+        <div class="container">
+            <div class="row justify-content-center">
+                <div class="col-lg-10 fade-in">
+                    <h2 class="fw-bold mb-5 text-center">My Story</h2>
+                    <div class="row align-items-center">
+                        <div class="col-md-4 mb-4 mb-md-0">
+                            <div class="p-4 bg-dark text-white rounded shadow">
+                                <h5 class="text-primary fw-bold">Current State</h5>
+                                <p class="small">Polytechnic Student focusing on Software Engineering, AI, and
+                                    Collaborative Development.</p>
+                                <hr class="bg-light">
+                                <h5 class="text-primary fw-bold">The Goal</h5>
+                                <p class="small mb-0">Aspiring SUTD Undergraduate & Full-Stack Developer.</p>
+                            </div>
+                        </div>
+                        <div class="col-md-8">
+                            <p class="lead fw-bold text-primary">From Player to Creator.</p>
+                            <p>My journey into tech started with a simple goal: I wanted to create games that others
+                                could enjoy. While I hit roadblocks early on, a school program using
+                                <strong>Scratch</strong> reignited my passion, leading me to take programming as a
+                                subject in Secondary 3 and get an A for my O levels.
+                            </p>
+
+                            <p>I spent my early years self-teaching <strong>Python, HTML/CSS, JavaScript, and
+                                    Java</strong>. This foundation allowed me to return to Roblox Studio with a new
+                                perspective—mastering <strong>Luau</strong> to build successful, experience-driven games
+                                rather than just following tutorials.</p>
+
+                            <p>Today, I’ve shifted my focus toward <strong>Software Engineering and AI</strong>. I've
+                                moved from solo projects to team-based hackathons and industry-standard workflows. I am
+                                constantly learning, with my sights set on <strong>SUTD</strong> to further refine my
+                                craft.</p>
+                        </div>
+                    </div>
+                </div>
+            </div>
+        </div>
+    </section>
+
     <section id="projects" class="container my-5 py-5">
         <h2 class="text-center mb-5 fw-bold">Featured Projects</h2>
 
@@ -47,76 +88,30 @@
                 <div class="card project-card-full shadow-sm border-0 overflow-hidden">
                     <div class="row g-0">
                         <div class="col-lg-6">
-                            <img src="Assets/images/web-app.png" class="img-fluid h-100 w-100 object-fit-cover"
-                                alt="Web App">
+                            <img src="Assets/images/your-image.png" class="img-fluid h-100 w-100 object-fit-cover"
+                                alt="Project Image">
                         </div>
                         <div class="col-lg-6 p-4 d-flex flex-column justify-content-center">
-                            <h3 class="fw-bold">Full-Stack Web App (IT1x25)</h3>
-                            <p class="text-muted mb-2"><strong>Role:</strong> Lead Developer</p>
-                            <p>Developed a user-centric platform to manage dynamic content using Python Flask and SQL.
-                                Focused on security checks and a mobile-responsive design.</p>
+                            <h3 class="fw-bold">Project Title</h3>
+                            <p class="text-muted mb-2"><strong>Role:</strong> Your Role Here</p>
+                            <p>Short description of what the project actually is and the tech used.</p>
+
+                            <div class="mt-3 p-3 bg-light rounded shadow-sm border-start border-primary border-4">
+                                <h5 class="fw-bold small text-uppercase text-primary">Outcome & Learnings</h5>
+                                <p class="small mb-0">What happened? (e.g., Optimized code by 20%). What did you learn?
+                                    (e.g., Mastered SQL joins).</p>
+                            </div>
+
                             <div class="tag-container mt-auto pt-3">
-                                <span class="mini-tag">Python</span>
-                                <span class="mini-tag">Flask</span>
-                                <span class="mini-tag">SQL</span>
-                                <span class="mini-tag">Render</span>
+                                <span class="mini-tag">Language</span>
+                                <span class="mini-tag">Tool</span>
                             </div>
                         </div>
                     </div>
                 </div>
             </div>
         </div>
-
-        <div class="row mb-5 fade-in">
-            <div class="col-12">
-                <div class="card project-card-full shadow-sm border-0 overflow-hidden">
-                    <div class="row g-0">
-                        <div class="col-lg-6">
-                            <img src="Assets/images/discord-bot.png" class="img-fluid h-100 w-100 object-fit-cover"
-                                alt="Discord Bot">
-                        </div>
-                        <div class="col-lg-6 p-4 d-flex flex-column justify-content-center">
-                            <h3 class="fw-bold">Python Discord Bot</h3>
-                            <p class="text-muted mb-2"><strong>Role:</strong> Solo Developer</p>
-                            <p>Automation tool for community management. Leveraged APIs to handle asynchronous events
-                                and real-time data fetching for improved user engagement.</p>
-                            <div class="tag-container mt-auto pt-3">
-                                <span class="mini-tag">Python</span>
-                                <span class="mini-tag">Discord API</span>
-                                <span class="mini-tag">AsyncIO</span>
-                            </div>
-                        </div>
-                    </div>
-                </div>
-            </div>
-        </div>
-
-        <div class="row mb-5 fade-in">
-            <div class="col-12">
-                <div class="card project-card-full shadow-sm border-0 overflow-hidden">
-                    <div class="row g-0">
-                        <div class="col-lg-6">
-                            <img src="Assets/images/roblox-game.png" class="img-fluid h-100 w-100 object-fit-cover"
-                                alt="Roblox Game">
-                        </div>
-                        <div class="col-lg-6 p-4 d-flex flex-column justify-content-center">
-                            <h3 class="fw-bold">Roblox Scripting & UX</h3>
-                            <p class="text-muted mb-2"><strong>Role:</strong> Game Developer</p>
-                            <p>Engineered custom gameplay mechanics using Luau and designed scalable UI/UX systems.
-                                Optimized client-server communication to handle high player counts.</p>
-                            <div class="tag-container mt-auto pt-3">
-                                <span class="mini-tag">Luau</span>
-                                <span class="mini-tag">Roblox Studio</span>
-                                <span class="mini-tag">UX Design</span>
-                            </div>
-                        </div>
-                    </div>
-                </div>
-            </div>
-        </div>
-
     </section>
-
     <footer id="contact" class="bg-light py-5 border-top" style="padding-bottom: 300px !important;">
         <div class="container text-center">
             <h3>Thanks for stopping by!</h3>
