--- a/index.html
+++ b/index.html
@@ -93,13 +93,12 @@
                         </div>
                         <div class="col-lg-6 p-4 d-flex flex-column justify-content-center">
                             <h3 class="fw-bold">Project Title</h3>
-                            <p class="text-muted mb-2"><strong>Role:</strong> Your Role Here</p>
-                            <p>Short description of what the project actually is and the tech used.</p>
+                            <p class="text-muted mb-2"><strong>Role:</strong> ROLE HERE</p>
+                            <p>Short description here.</p>
 
                             <div class="mt-3 p-3 bg-light rounded shadow-sm border-start border-primary border-4">
                                 <h5 class="fw-bold small text-uppercase text-primary">Outcome & Learnings</h5>
-                                <p class="small mb-0">What happened? (e.g., Optimized code by 20%). What did you learn?
-                                    (e.g., Mastered SQL joins).</p>
+                                <p class="small mb-0">Outcomes here (of project).</p>
                             </div>
 
                             <div class="tag-container mt-auto pt-3">
