--- a/index.html
+++ b/index.html
@@ -83,12 +83,12 @@
     <section id="projects" class="container my-5 py-5">
         <h2 class="text-center mb-5 fw-bold">Featured Projects</h2>
 
-        <div class="row mb-5 fade-in">
+        <div class="row mb-5 pop-up">
             <div class="col-12">
                 <div class="card project-card-full shadow-sm border-0 overflow-hidden">
                     <div class="row g-0">
                         <div class="col-lg-6">
-                            <img src="Assets/images/your-image.png" class="img-fluid h-100 w-100 object-fit-cover"
+                            <img src="Assets/Placeholder.jpg" class="img-fluid h-100 w-100 object-fit-cover"
                                 alt="Project Image">
                         </div>
                         <div class="col-lg-6 p-4 d-flex flex-column justify-content-center">
@@ -104,6 +104,60 @@
                             <div class="tag-container mt-auto pt-3">
                                 <span class="mini-tag">Language</span>
                                 <span class="mini-tag">Tool</span>
+                            </div>
+                        </div>
+                    </div>
+                </div>
+            </div>
+        </div>
+        <div class="row mb-5 pop-down">
+            <div class="col-12">
+                <div class="card project-card-full shadow-sm border-0 overflow-hidden">
+                    <div class="row g-0">
+                        <div class="col-lg-6">
+                            <img src="Assets/Placeholder.jpg" class="img-fluid h-100 w-100 object-fit-cover"
+                                alt="Another Project">
+                        </div>
+                        <div class="col-lg-6 p-4 d-flex flex-column justify-content-center">
+                            <h3 class="fw-bold">Second Project</h3>
+                            <p class="text-muted mb-2"><strong>Role:</strong> Developer</p>
+                            <p>Description of the second project goes here.</p>
+
+                            <div class="mt-3 p-3 bg-light rounded shadow-sm border-start border-primary border-4">
+                                <h5 class="fw-bold small text-uppercase text-primary">Outcome & Learnings</h5>
+                                <p class="small mb-0">What I learned from the second project.</p>
+                            </div>
+
+                            <div class="tag-container mt-auto pt-3">
+                                <span class="mini-tag">JavaScript</span>
+                                <span class="mini-tag">Bootstrap</span>
+                            </div>
+                        </div>
+                    </div>
+                </div>
+            </div>
+        </div>
+        <div class="row mb-5 pop-up">
+            <div class="col-12">
+                <div class="card project-card-full shadow-sm border-0 overflow-hidden">
+                    <div class="row g-0">
+                        <div class="col-lg-6">
+                            <img src="Assets/Placeholder.jpg" class="img-fluid h-100 w-100 object-fit-cover"
+                                alt="Third Project">
+                        </div>
+                        <div class="col-lg-6 p-4 d-flex flex-column justify-content-center">
+                            <h3 class="fw-bold">Third Project</h3>
+                            <p class="text-muted mb-2"><strong>Role:</strong> Designer</p>
+                            <p>A brief description of the third project.</p>
+
+                            <div class="mt-3 p-3 bg-light rounded shadow-sm border-start border-primary border-4">
+                                <h5 class="fw-bold small text-uppercase text-primary">Outcome & Learnings</h5>
+                                <p class="small mb-0">Key outcomes from the third project.</p>
+                            </div>
+
+                            <div class="tag-container mt-auto pt-3">
+                                <span class="mini-tag">HTML</span>
+                                <span class="mini-tag">CSS</span>
                             </div>
                         </div>
                     </div>
