--- a/index.html
+++ b/index.html
@@ -82,22 +82,86 @@
 
     <section id="projects" class="container my-5 py-5">
         <h2 class="text-center mb-5 fw-bold">Featured Projects</h2>
+
         <div class="row mb-5 pop-up">
             <div class="col-12">
                 <div class="card project-card-full shadow-sm border-0 overflow-hidden">
                     <div class="row g-0">
                         <div class="col-lg-6">
                             <img src="Assets/Placeholder.jpg" class="img-fluid h-100 w-100 object-fit-cover"
-                                alt="Project Image">
+                                alt="Web App">
                         </div>
                         <div class="col-lg-6 p-4 d-flex flex-column justify-content-center">
-                            <h3 class="fw-bold">Project Title</h3>
-                            <p class="text-muted mb-2"><strong>Role:</strong> ROLE HERE</p>
-                            <p>Short description here.</p>
+                            <h3 class="fw-bold">Full-Stack Data Management Ecosystem</h3>
+                            <p class="text-muted mb-2"><strong>Role: </strong>Lead Developer & Project Coordinator</p>
+                            <p>Spearheaded a team of 4 to architect a comprehensive full-stack application. Engineered a
+                                <strong>Python Flask</strong> backend integrated with <strong>SQLite</strong> and a
+                                custom Discord bot to automate multi-platform file categorization. Focused on
+                                implementing asynchronous API endpoints and scalable database architecture to ensure
+                                seamless data flow.</p>
 
                             <div class="tag-container mt-auto pt-3">
-                                <span class="mini-tag">Language</span>
-                                <span class="mini-tag">Tool</span>
+                                <span class="mini-tag">Python (Flask)</span>
+                                <span class="mini-tag">SQLite</span>
+                                <span class="mini-tag">REST APIs</span>
+                                <span class="mini-tag">JavaScript</span>
+                                <span class="mini-tag">Team Leadership</span>
+                            </div>
+                        </div>
+                    </div>
+                </div>
+            </div>
+        </div>
+
+        <div class="row mb-5 pop-up">
+            <div class="col-12">
+                <div class="card project-card-full shadow-sm border-0 overflow-hidden">
+                    <div class="row g-0">
+                        <div class="col-lg-6">
+                            <img src="Assets/Placeholder.jpg" class="img-fluid h-100 w-100 object-fit-cover"
+                                alt="Discord Bot">
+                        </div>
+                        <div class="col-lg-6 p-4 d-flex flex-column justify-content-center">
+                            <h3 class="fw-bold">Community Automation & Moderation Bot</h3>
+                            <p class="text-muted mb-2"><strong>Role: </strong>Backend Developer</p>
+                            <p>Developed and deployed a robust Discord automation tool serving a community of over
+                                <strong>1,000 active members</strong>. Implemented automated moderation logic and
+                                real-time user engagement features. Utilized <strong>Continuous Deployment (CD)</strong>
+                                workflows to ensure 99.9% uptime and rapid feature iteration.</p>
+
+                            <div class="tag-container mt-auto pt-3">
+                                <span class="mini-tag">Python</span>
+                                <span class="mini-tag">Discord API</span>
+                                <span class="mini-tag">CI/CD</span>
+                                <span class="mini-tag">Automation</span>
+                            </div>
+                        </div>
+                    </div>
+                </div>
+            </div>
+        </div>
+
+        <div class="row mb-5 pop-up">
+            <div class="col-12">
+                <div class="card project-card-full shadow-sm border-0 overflow-hidden">
+                    <div class="row g-0">
+                        <div class="col-lg-6">
+                            <img src="Assets/Placeholder.jpg" class="img-fluid h-100 w-100 object-fit-cover"
+                                alt="Roblox Game">
+                        </div>
+                        <div class="col-lg-6 p-4 d-flex flex-column justify-content-center">
+                            <h3 class="fw-bold">Immersive 3D Multiplayer Experience</h3>
+                            <p class="text-muted mb-2"><strong>Role: </strong>Lead Game Developer</p>
+                            <p>Designed and programmed a multiplayer 3D environment using the <strong>Roblox Studio
+                                    Engine</strong> and <strong>Luau</strong>. Engineered complex gameplay systems
+                                involving 3D spatial math and custom UI frameworks. Focused on game balancing and
+                                post-launch optimization to maintain high user retention and performance.</p>
+
+                            <div class="tag-container mt-auto pt-3">
+                                <span class="mini-tag">Luau</span>
+                                <span class="mini-tag">Roblox Studio</span>
+                                <span class="mini-tag">3D Math</span>
+                                <span class="mini-tag">UI/UX Design</span>
                             </div>
                         </div>
                     </div>
@@ -108,8 +172,9 @@
     <footer id="contact" class="bg-light py-5 border-top" style="padding-bottom: 300px !important;">
         <div class="container text-center">
             <h3>Thanks for stopping by!</h3>
-            <p class="text-muted">Feel free to reach out if you'd like to collaborate or just chat about code.</p>
-            <p class="fw-bold">joshuaooiky@gmail.com</p>
+            <p class="text-muted">Feel free to reach out if you'd like to collaborate or just have chat.</p>
+            <p class="fw-bold"><a href="mailto:joshuaooiky@gmail.com">joshuaooiky@gmail.com</a></p>
+            <p class="fw-bold"><a href="https://sg.linkedin.com/in/joshua-ooi-891086394">LinkedIn Profile</a></p>
             <p class="mt-4 small text-secondary">&copy; 2026 Joshua Ooi</p>
         </div>
     </footer>
